[tool.poetry]
name = "lesson-17"
version = "0.1.0"
description = ""
authors = ["Airon (Maxim Lysov) <maksim285@mail.ru>"]
readme = "README.md"
packages = [{include = "lesson_17"}]

[tool.poetry.dependencies]
python = "^3.9"
selene = "^2.0.0rc2"
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
